notebook-dev/jupyter-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <namespace-name>
  labels:
    purpose: jupyter-notebook
