notebook-dev/jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
  namespace: <namespace-name>
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: jupyter.<namespace-name>.genai-staging.nchc.org.tw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyter-svc
                port:
                  number: 80
  tls:
    - hosts:
      - jupyter.<namespace-name>.genai-staging.nchc.org.tw
      secretName: jupyter-tls
